# KBTU_registrator_Unix

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  ai_helper.py  db_models.py  debug_test_questions_1769266075.html  debug_test_questions_1769267713.html  debug_test_questions_1769268055.html  debug_test_questions_1769268637.html  debug_test_questions_1769268976.html  debug_test_questions_1769269098.html  debug_test_questions_1769269401.html  debug_test_questions_1769269571.html  debug_test_questions_1769270163.html  inspect.html  monitor.py  pdf.py  pyproject.toml  query_questions.py  requirements.txt  unix_agent.py  web_app.py  worker.py
app/: main.py
app/api/: routes.py  (+1 more)
images/: debug_login_failed_1769264184.html  debug_login_failed_1769264209.html  debug_login_failed_1770904828.html  debug_page_source.html  debug_test_questions_1769265913.html  debug_test_questions_1769266261.html  debug_test_questions_1769266552.html  debug_test_questions_1769267236.html  debug_test_questions_1769267939.html  debug_test_questions_1769269040.html  debug_test_questions_1769269131.html  debug_test_questions_1769270777.html  debug_test_questions_1769319226.html  debug_test_questions_1769319516.html  debug_test_questions_1769321010.html  debug_test_questions_1769321079.html  debug_test_questions_1769331487.html  debug_test_questions_1769332641.html  debug_test_questions_1769333029.html  debug_test_questions_1769333362.html  debug_test_questions_1769488509.html  debug_test_questions_1769488597.html  debug_test_questions_1769488806.html  debug_test_questions_1769494122.html  (+22 more)
(+10 files in other folders)
